# eora2-test

./: .gitignore  README.md  pyproject.toml  requirements.txt
eora2_test/: faq_operator.ipynb
